--- a/Infinity Games/projeto infinity/src/view/TelaPrincipal.form
+++ b/Infinity Games/projeto infinity/src/view/TelaPrincipal.form
@@ -136,7 +136,7 @@
     <Component class="javax.swing.JLabel" name="ImageFundo">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/image/Telas princ.png"/>
+          <Image iconType="3" name="/image/Tela Principal Sem Login.png"/>
         </Property>
       </Properties>
       <Constraints>
